--- a/PROJECTHUB ENTERPRISE/Pages/Index.cshtml
+++ b/PROJECTHUB ENTERPRISE/Pages/Index.cshtml
@@ -109,7 +109,7 @@
                                         {
                                             <button class="btn btn-sm btn-outline-danger ms-1"
                                                     onclick="toggleProject('@p.ProjectId', true)">
-                                                Delete
+                                                Change Status
                                             </button>
                                         }
                                         else
