--- a/PROJECTHUB ENTERPRISE/Pages/Account/Login.cshtml
+++ b/PROJECTHUB ENTERPRISE/Pages/Account/Login.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Login";
     Layout = "_Layout";
 }
-
+@section Styles {
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
+}
 <div class="container vh-100 d-flex align-items-center justify-content-center">
     <div class="card shadow-sm border-0" style="width: 420px;">
         <div class="card-body p-4">
